--- a/functions.ipynb
+++ b/functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "331c6059",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d03535fb",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e3c4a99f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c634c12a",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a30ac9a2",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8bee09da",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a3b053e9",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "70b0dbcb",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,11 +146,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d55b362f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92\n",
+      "85\n",
+      "87\n",
+      "98\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the format function\n",
+    "my_grades = [92.34, 84.56, 86.78, 98.32]\n",
+    "\n",
+    "for grade in my_grades:\n",
+    "    print(\"{:.0f}\".format(grade))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "28b10bfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    92.34\n",
+       "1    84.56\n",
+       "2    86.78\n",
+       "3    78.32\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the numerical grades to a Series.\n",
+    "my_grades = pd.Series([92.34, 84.56, 86.78, 78.32])\n",
+    "my_grades\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87c33a36",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Format the grades to the nearest whole number percent.\n",
+    "my_grades.map(\"{:.0f}\".format)"
+   ]
   }
  ],
  "metadata": {
